welcome.lessons.welcome.array.indexof.maxvalue.IndexOfMaxValue.scala.error
indexOfMaxValue:5: error: not found: value l
	for(i<- 0 to l-1){
                     ^